edit the property

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="Pun King Fung's Portfolio" content="Portfolio content"/>
     <meta property="og:title" content="Pun King Fung Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashutosh1919.github.io/" />
+    <meta property="og:url" content="https://fung1117.github.io/" />
     <meta name="description" content="Pun King Fung's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
     <meta name="keywords" content="Pun King Fung, PortFolio, MasterPortfolio, Pun King Fung's Portfolio" />
